--- a/german_credit.RMD
+++ b/german_credit.RMD
@@ -28,8 +28,8 @@ names(credit_original)   <-  colNames
 
 ## Oveview
 
-The project is based on the study of the dataset **German credit data**, it has been downloaded from the UCI machine learning repository at **<https://archive.ics.uci.edu/ml/datasets/Statlog+%28German+Credit+Data%29>**  It consists of a data text file containing 1k records and twenty attributes and has been converted in a dataframe named *credits_original*. At a first sight there are factors and numbers, all the factors are coded data as “Axxx” format whose meanings are  explained in a description text file  “german.doc” located at the same repository; from the same file have been extracted the metadata and promptly converted in variables names. In the next section the activity of conversion/replacement of dataset is shown
-This project rely on a typical binary classification problem: there is only a label “credit” whose possible values are “good” and “bad” which refer to a bank customer who asked for a credit; the one who payed back are “good”, the one didn’t, “back”.
+The project is based on the study of the dataset **German credit data**, it has been downloaded from the UCI machine learning repository at **<https://archive.ics.uci.edu/ml/datasets/Statlog+%28German+Credit+Data%29>**  It consists of a data text file containing 1k records and twenty attributes and has been converted in a dataframe named *credit_original*. At a first sight there are factors and numbers, all the factors are coded data as “Axxx” format whose meanings are  explained in a description text file  “german.doc” located at the same repository; from the same file have been extracted the metadata and promptly converted in variables names. In the next section the activity of conversion/replacement of dataset is shown.
+This project relies on a typical binary classification problem: there is only a label “credit” whose possible values are “good” and “bad” which refers to a bank customer who asked for a credit.
 The bank board would wish to know in advance who would be good an who would be bad, on the basis of customer attributes. The target is to study and  evalute best approaches to predict with high reliability the customer category on the base of attributes/factors after data manipulation/trasformation and a set of analysis tasks. 
 This document reports the following sections:
 
@@ -37,7 +37,7 @@ This document reports the following sections:
 
 - **Data exploration** Variables in the dataset are explored and checked in order to choose the relevant factors that could be used as predictors for the target labels.
 
-- **The modeling approach** ML algorithms that best fit the kind of problem are chosen to predict the outcome, on the basis of the predictors assesed on the data exploration section. Usually, more than an ML is checked and tuned and chosen the one that minimize rmse or maximize accuracy.
+- **The modeling approach** ML algorithms that best fit the kind of problem are chosen to predict the outcome, on the basis of the predictors assesed on the data exploration section. Usually, more than an ML model is checked and tuned and chosen the one that best fits the business requirement.
 
 - **Results** The ML outcomes are compared, and evaluated pros and cons of the different approaches.
 
@@ -47,7 +47,7 @@ This document reports the following sections:
 
 ## Data Cleaning
 
-The first operation that have to be done on data is to check the presence of the inconsistent values that could affect the correctness of analysis. Generally, if we don’t take in count incoherent values, mean and sd could be affected by bias, all the further analisys would be affected by some kind of error, and prediction would fail. First of all, the presence of NA’s must be checked. Fortunately, the data frame does not contain NA’s value as shown in the following R code,
+The first operation that have to be done on data is to check the presence of the inconsistent values that could affect the correctness of analysis and bias the ML model results. Generally, if we don’t take in count incoherent values, mean and sd could be affected by bias, all the further analisys would be affected by some kind of error, and prediction would fail. First of all, the presence of NA’s must be checked. Fortunately, the data frame does not contain NA’s values as shown in the following R code,
 so all the metrics are calculated on true data.
 
 
@@ -61,14 +61,14 @@ glimpse(credit_original)
 ```
 
 The next activity arranges data to get them more meaningful. The *credit_original* and the *key_map* dataframes are used as input for computing a new dataframe *credit_clear* whose values replace the coded "Axxx" values of  the original one.
-The *key_map* is a obtained from the *german.doc*, conveniently slightly handly modified, that is a kind of hash-map with two variables: the keys as "Axxx" format and the values as meaningful descriptions. Next, the glimpse of   *credit_clear* df.
+The *key_map* is  extracted from the *german.doc*, conveniently slightly handly modified, that is a kind of hash-map with two variables: the keys as "Axxx" format and the values as meaningful descriptions. Next, the glimpse of   *credit_clear* df.
 
 
 ```{r dataReplacement, echo=FALSE, message=FALSE, warning=FALSE}
 
 ####@@@@REPLACING coded values with meaningful data 
 library(tm)
-file.rename("german.doc","german.txt") #renames file to get it readable
+#file.rename("german.doc","german.txt") #renames file to get it readable
 key_map <- readLines("german.txt")
 key_map <- key_map[grepl("A[0-9]", key_map)] #filter rows with coded variable
 key_map <- as.data.frame(key_map)
@@ -89,7 +89,7 @@ credit_clear <- credit_clear %>% mutate(credit_response=ifelse(.$credit_response
 ```
 ## Data exploration
 
-Domain knowledge is essential before solving any ML problem, otherwise we will end up applying random algorithms and techniques blindly which may not give the right results. As a first step, to get a broad idea of what kind of data we are dealing with and summarize what has happened in the past, *descriptive analytics* will be applied.  The different attributes of the data will be observed in order to extract meaningful features, use statistics and visualizations to understand what has already happened. The information obtained could be  useful to select some predictive variables and exclude others that are not  The following table shows the number of unique values for each variable
+Prior to solve any ML problem, domain knowledge is essential, otherwise we will end up applying random algorithms and techniques blindly which may not give the right results. As a first step, to get a broad idea of what kind of data we are dealing with and summarize what has happened in the past, *descriptive analytics* will be applied.  The different attributes of the data will be observed in order to extract meaningful features, use statistics and visualizations to understand what has already happened. The information obtained could be  useful to select some predictive variables and exclude others that are not  The following table shows the number of unique values for each variable
 ```{r unique_values, echo=FALSE, message=FALSE, warning=FALSE}
 
 library(miscset)
@@ -103,19 +103,9 @@ unique_values %>% knitr::kable()
 
 ```
 
-The *credit_amount*, *credit_duration*, *age* variables are the numerical ones: the first  concerns the credit required, it shows the most variability among all variables, the second about the credit_duration in weeks, the third is about the wide range of appicant's age. The others are all categorical variables.
+The *credit_amount*, *credit_duration*, *age* variables are the numerical ones: the first  concerns the credit required, it shows the most variability among all variables, the second about the credit_duration in weeks, the third is about the wide range of customer's age. The others are all categorical variables.
 
-Next a simple plot showing the "good" and "bad" credit proportions: the first that should get the positive bank board evaluation has `r  {length(which(credit_clear$credit_response=="good"))/10}`% proportion an the second that should not the `r {length(which(credit_clear$credit_response=="bad"))/10}`%
-
-```{r credit_response, echo=FALSE, message=FALSE, warning=FALSE}
-
-#credit response plot
-qplot(credit_clear$credit_response, geom="bar",
-      fill=I('gray'), col=I('black'),
-      xlab = "Credit response" , ylab = "Count" )
-
-```
-
+The dataset shows that "Good"" customers have `r  {length(which(credit_clear$credit_response=="good"))/10}`% proportion, and bad  `r {length(which(credit_clear$credit_response=="bad"))/10}`%. This is a first simple hint of predicted proportion
 
 The next plot shows the *credit amount* factor vs credit response, split in two parts: the good credit  and the bad credit.
 As shown, the credit response does not seem to rely on credit amount, the plots look like quite similar. Most of applicants ask for low amount, i.e. the 75% is lower than `r  {quantile(credit_clear$credit_amount, names=FALSE)[4]}` DM and the average is `r  {mean(credit_clear$credit_amount)}` DM
@@ -138,8 +128,7 @@ grid.arrange(p1, p2, ncol = 2)
 
 ```
 
-The following illustrations show graphically and as-a-table the *Credit_history* distribution and proportions. More than half are trusted applicants who are reliable debtors, one-third have critical account so that they need a loan for some purchase.
-
+The following illustrations show graphically and as-a-table the *Credit_history* distribution and proportions. More than half are trusted customers who are reliable debtors, one-third have critical account so that they need a loan for some purchase.
 ```{r credit_history_summary, echo=FALSE, message=FALSE, warning=FALSE}
 #credit history distribution
 credit_clear  %>% ggplot(aes(Credit_history)) +
@@ -152,16 +141,15 @@ as.data.frame(credit_clear %>% group_by(Credit_history) %>% summarize(amount=n()
 ```
 
 The next plot show no direct relationship between *Credit_history* and credit response ( the *credit_response* variable chosen as label). The two bar diagrams are quite similar and the different heights are releted to the proportion as shown in the table
-
 ```{r credit_history_by_credit_response, echo=FALSE, message=FALSE, warning=FALSE}
 
 #credit history distribution vs credit response
 p1 <- credit_clear  %>% filter(credit_response=="good") %>% ggplot(aes(x=.$Credit_history)) +
-  ggtitle(" Credit pass")+ geom_bar(fill="green") + 
+  ggtitle(" Good credit")+ geom_bar(fill="green") + 
   scale_y_continuous(limits=c(0,400))+xlab("Credit history")+ ylab("Count") + theme(axis.text.x = element_text(angle = 90))
 
 p2 <- credit_clear %>% filter(credit_response=="bad") %>%  ggplot(aes(x=.$Credit_history)) +
-  ggtitle(" Credit fail")+ geom_bar(fill="red") + 
+  ggtitle(" Bad credit")+ geom_bar(fill="red") + 
   scale_y_continuous(limits=c(0,400))+xlab("Credit history")+ ylab("Count") + theme(axis.text.x = element_text(angle = 90))
 
 library(gridExtra)
@@ -172,7 +160,6 @@ grid.arrange(p1, p2, ncol = 2)
 
 The analysis next step focuses on *credit_amount*, *personal_status* and *age*. The table shows the proportion of personal status categories: more than half are male singles, the 30% are generally female. The majority of the first have bad credit, although `r  {credit_clear %>% filter(credit_amount >=7500   & personal_status=="male_single" & credit_response=="good") %>% count(.)   %>% .$n}` in 1000 is good for credit over 7500 DM as shown in the first plot.
 The plot age vs personal status does not seem of particular interest, but generally the proportion of females that has "good"" credit is higher than "bad".
-
 ```{r credit_amount_by_personal_stat, echo=FALSE, message=FALSE, warning=FALSE}
 
 credit_clear  %>%  ggplot(aes(x=personal_status,y=credit_amount,fill=credit_response)) +
@@ -190,8 +177,7 @@ credit_clear  %>%  ggplot(aes(x=personal_status,y=age,fill=credit_response)) +
 ```
 
 Prior to start job and employment-history, two tables have been provided in order to observe proportions. It is very hard for unskilled and uemployed applicants to ask for loan, infact only 22 in 1000 are present as observation, so that these have been cut out from box-plot analysis.
-The data set top job is the skilled-employee, who more easly is a good credit candidate for middle/high credit amount. In proportion, managers/self-employed ask for high credit, but generally they are not considered very reliable. No way for unemployed, eventually skilled emplyee with consolidated employment history are favourite.
-
+The data set top job is the skilled-employee, who more easly is a good credit candidate for middle/high credit amount. In proportion, managers/self-employed ask for high credit, but generally they are not considered very reliable. No way for unemployed, eventually skilled emplyees with consolidated employment history are favourite.
 ```{r emplyment-since, echo=FALSE, message=FALSE, warning=FALSE}
 #Job Proportion table
 as.data.frame(credit_clear %>% group_by(job) %>% summarize(Total=n())) %>%  mutate(perc=Total/dim(credit_clear)[1]*100)%>% knitr::kable()
@@ -208,10 +194,9 @@ credit_clear  %>%  filter(job!="unemployed/unskilled_non-resident") %>% ggplot(a
 ```
 
 The credit-history is important to figure out the customer trust; The 53% of them are reliable applicants that pay duly existing credits; the 30% are customers with critical account either with other credits in different bank. Anyway, as shown in the table, except for a 6% that has a good bank account, the proportions are fairly partitioned among enough account, negative account, or even with no account.
-The *credit duration density plot* shows that most of good credit last few weeks, whilst long time credits tend to be not so good.
+The *credit duration density plot* shows that most of good credits last few weeks, whilst long time credits tend to be not so good.
 Looking at the *Cheking-account VS credit_duration* plot, except for customers with good account, the bank consider "bad" the credit_duration over 25 weeks: i.e. debtors,thin, and  no_accounts are absolutely bad, while good account is trusted as expected. The plot with credit_history parameter shows that existing_paid_duly customers are the most reliable.
-Finally, in the last plot *Credit amount by Cheking-account*  high credit_amount is approved for some with no account, but generally -if not with a good account- bad credit response is prevalent. 
-
+Finally, in the last plot *Credit amount by Cheking-account*  high credit_amount is approved for some with no account, but generally -if not with a good account- bad credit response is prevalent.
 ```{r checking_account/credit_duration/history, echo=FALSE, message=FALSE, warning=FALSE}
 #Credit_history proportion table
 as.data.frame(credit_clear %>% group_by(Credit_history) %>% summarize(Total=n())) %>% 
@@ -248,11 +233,10 @@ credit_clear %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
-As analysis last step, other meaningful attributes vs credit_amount has been illustrated. The saving_accounts proportion table shows that poors are the absolute majority: it is quite normal that who has low savings ( and possibly no other neither little property) tends to ask for a loan.
+As analysis last step, other meaningful attributes vs credit_amount have been illustrated. The saving_accounts proportion table shows that poors are the absolute majority: it is quite normal that who has low savings ( and possibly no other neither little property) tends to ask for a loan.
 The 60% of total ask loans for cars or radio/television.
 In the *Credit amount vs Property on saving-account parameter* the "excellent" saving_account value has been excluded, because it is a very few amount, also "good" and "very good" have very few applicants; poor or no-savings with no-property/unkown have favour but not for high amount.
-The *Credit amount vs age on saving-account parameter* plot shows a different perspective based on age: generally the most of customers are in the 20-45 age rank, anyway who has poor or no-saving could be older. Only a little proportion of poor-saving-customer gets credit over 7500 DM.On the other hand, customers with no or unknown savings have high chance to get positive classification. Seemingly, as savings increase the proportion of good evaluation  increases too regardless age,  anyway the correlation between savings and credit amount is `r  {cor(credit_clear$credit_amount,as.numeric(as.factor(credit_clear$savings_account))) }` which is too low and it would depend, among others, on different age and saving prportions.   
-
+The *Credit amount vs age on saving-account parameter* plot shows a different perspective based on age: generally the most of customers are in the 20-45 age rank, anyway who has poor or no-saving could be older. Only a little proportion of poor-saving-customer gets credit over 7500 DM.On the other hand, customers with no or unknown savings have high chance to get positive classification. Seemingly, as savings increase, the proportion of good evaluation  increases too regardless age;  anyway the correlation between savings and credit amount is `r  {cor(credit_clear$credit_amount,as.numeric(as.factor(credit_clear$savings_account))) }` which is too low and it would depend, among others, on different age and saving proportions.
 ```{r other/credit_amount/pt1, echo=FALSE, message=FALSE, warning=FALSE}
 #savings_account proportion table
 as.data.frame(credit_clear %>% group_by(savings_account) %>% summarize(Total=n())) %>% 
@@ -327,8 +311,8 @@ credit_clear %>%
 **Preprocessing**
 
 At the end of data exploration, it’s important to inspect the relationship between variables, if two or more of them are correlated, they would give quite same information about prediction, so we should choose only the ones with no redundant information.
-To apply the correlation function, The *credit_original* must be converted in df numeric, i.e. all the factor varaible are transformed in numeric, so we have a *credit_num* dataframe as shown in a glimpse.
-The correlation illustrated graphics show correlation between variables ordered by crrelation rate. That couple that appears most correlated is *duration/credit_amount* whose value is `r  {cor(credit_clear$credit_duration,credit_clear$credit_amount) }`. Next, the related scatterplot that includes smoothing function; as shown, there is a natural straight relationship between amount and duration, the great is the credit the more are instalment (i.e. longer duration) when the credit is bad the tendency looks like quite different; anyway the general tendency seems to be too approximate, so that both shold be considered as independent factors.
+To apply the correlation function, The *credit_original* must be converted in df numeric, i.e. all the factor variable are transformed in numeric, so we have a *credit_num* dataframe as shown in a glimpse.
+The correlation illustrated graphics show correlation between variables ordered by correlation rate. That couple that appears most correlated is *duration/credit_amount* whose value is `r  {cor(credit_clear$credit_duration,credit_clear$credit_amount) }`. Next, the related scatterplot that includes smoothing function; as shown, there is a natural straight relationship between amount and duration, the great is the credit the more are instalment (i.e. longer duration) when the credit is bad the tendency looks like quite different; anyway the general tendency seems to be too approximate, so that both should be considered as independent factors.
 
 ```{r Preproc_correlation, echo=FALSE, message=FALSE, warning=FALSE}
 #converting credit_original to a numeric df
@@ -396,17 +380,19 @@ y <- german_credit_train[,20] #outcome
 ```
 
 **ML models** 
-The following Machine learning algorithms have been chosen to fit train data and predict outcome on test data. These are among the most used, and fit quite well with the dataset; on the other hand the *knn* does not because it is not particularly effective on variables where there is a luck of hierarchical relationship between levels or numbers, so ithas not be chosen as model.  
+
+The following Machine learning algorithms have been chosen to fit train data and predict outcome on test data. These are among the most used, and fit quite well with the dataset; on the other hand the *knn* does not because it is not particularly effective on variables where there is a luck of hierarchical relationship between levels or numbers, so it has not been chosen as model.  
 
 -	**GLM**
 -	**Random Forest**
 -	**Rpart**
 -	**Naive bayes**
 
-To explore the variable reduction approach, in the end of section the PCA model has been also inspected.
+To explore the variable reduction approach, in the end of section the PCA model has been also inspected. 
 
 
 **GLM**
+
 This model works by trying to find out the relationship between the class variable and the other independent feature variables by estimating probabilities. Glm does not predict classes directly but the probability of the
 outcome, so that for the metrics evaluation the probability is converted in outcome classes. In this case, since this is  a binary classification problem, the approach is by binomial logistic regression. This model does not require cross validation because there are not parameters to tune.
 
@@ -431,15 +417,26 @@ print( knitr::kable(tab.glm))
 ```
 
 
+The table above shows the summarized metrics: the accuracy is quite good but not excellent. The sensitivity is good, the FPR=`r {1-cm_glm$byClass["Specificity"]}` is quite considerable.
+
+
+
+**RANDOM FOREST**
+
+Random forest is  a machine learning algorithm that comes from the family of ensemble learning algorithms. At any point in time,each tree in the ensemble of decision trees is built from a bootstrap sample, which is
+basically sampling with replacement. The randomness of the algorithm increases the bias of the model slightly but decreases the variance and then prevents overfitting. The first approach takes into account all the variables, the second only a subset of them chosen after variable importance computed by cross-validated training 
+
+
 ```{r model_RF_train, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
 
 # RF Algorithm Cross Validation to look for mtry best parameter
 metric <- "Accuracy"
 control <- trainControl(method="repeatedcv", number=10, repeats=3, search="random")
 set.seed(123)
-rf.train <- train(x,y, data=german_credit_train, method="rf",
-                  metric=metric, tuneLength=15, trControl=control)
-#print(rf.train) #print results
+#COMMENT NEXT LINE if: rf.train <- readRDS("rfTrain.RDS")
+#rf.train <- train(x,y, data=german_credit_train, method="rf",metric=metric, tuneLength=15, trControl=control)
+
+rf.train <- readRDS("rfTrain.RDS") # UNCOMMENT IF RUN THE ABOVE LINE
 plot(rf.train, main="Random forest cross-validation") #plots the accuracy/mtree graphic
 rf.best_mtry <- rf.train$bestTune$mtry #model best tune
 
@@ -469,24 +466,34 @@ rf.cm.imp <- confusionMatrix(rf.pred.imp, reference=german_credit_test$credit_re
 tab.rf_imp <- data_frame(method = "RF_IMP", Accuracy = rf.cm.imp$overall["Accuracy"], Sensitivity=data.frame(rf.cm.imp$byClass["Sensitivity"])[1,1],
            Specificity=data.frame(rf.cm.imp$byClass["Specificity"])[1,1]) 
 
-print(knitr::kable(tab.rf_imp))
+
 
 ```
 
-```{r model_RF_tEST, eval=TRUE, echo=FALSE, message=FALSE, warning=FALSE}
+The model, after cross-validation, is trained by randomForest randomForest's library function to tune both ntree and randomly selected predictors. The metrcs obtained with all predictors is better than the GLM apporach. The accuracy (0.80) is satisfactory and sensitivity too considering that the 70% of true data are *"good"*,  the specificity has improved too.
+In the second RF model, the nine most important predictors have been chosen for training: except a slightly specificity improvement, the other metrics got worse!`r {print(knitr::kable(tab.rf_imp))}`
 
-```
+
+
+**RPART**
+
+Rpart is an algorithm  that is a part of the decision trees family, that is CART family. Decision trees are mainly used for making decisions that would be most useful in reaching some objective and designing a strategy based on these decisions. They  are easy to represent, construct, and understand. However, the drawback is that they are very prone to overfitting. 
+As shown in the metrics table, when using all variables as predictors, the results are not so good as RandomForest
+
+
+
 
 
 ```{r model_RPart,  echo=FALSE, message=FALSE, warning=FALSE}
 
 set.seed(1234)
-rpart.train <- train(x, y, 
-                     method = 'rpart',
-                     metric = 'Accuracy',
-                     tuneGrid = data.frame(cp = seq(0, 0.05, len = 25))
-)
+#rpart.train <- train(x, y,  #COMMENT IF: rpart.train <- readRDS("rpartTrain.RDS")
+                    # method = 'rpart',
+                    # metric = 'Accuracy',
+                    # tuneGrid = data.frame(cp = seq(0, 0.05, len = 25)))
 
+
+rpart.train <- readRDS("rpartTrain.RDS") # UNCOMMENT IF RUN THE ABOVE LINE 
 plot(rpart.train, main="Rpart cross-validation")
 
 rpart.best_mtry <- rpart.train$bestTune$cp #model best tune for rpart (cp parameter)
@@ -524,10 +531,37 @@ rpart.cm.imp <- confusionMatrix(rpart.pred.imp, reference=german_credit_test$cre
 #Saving the model result
 tab.rpart_imp <- data_frame(method = "RPART_IMP", Accuracy = rpart.cm.imp$overall["Accuracy"], Sensitivity=data.frame(rpart.cm.imp$byClass["Sensitivity"])[1,1],
            Specificity=data.frame(rpart.cm.imp$byClass["Specificity"])[1,1])
-print(knitr::kable(tab.rpart_imp))
+
 
 ```
 
+
+The VarImp results are clear: the Rpart algorithm, for fitting, takes into account mainly six over nineteen variables; anyway the prediction after the retraining done with the six-variables subset of predictors, gives improved accuracy and sensitivity, but a very low  specificity, so that there is an high False positive rate. 
+`r {print(knitr::kable(tab.rpart_imp))}`
+
+
+**NAIVE BAYES**
+
+The Naïve Bayes classifier is a simple probabilistic classifier which is based on Bayes theorem but with strong assumptions regarding independence.
+Bayesian probability incorporates the concept of conditional probability, the probabilty of event A given that event B has occurred.
+This approach is based on the processing of the following formula:
+
+  $P(C_k \vert X) = \frac{P(C_k) \cdot P(X \vert C_k)}{P(X)}$
+  
+  Where:
+  
+  •	$P(C_k)$ = the *prior* probability of the outcome Y. 70% "good" and 30% "bad"
+  
+  •	$P(X)$ = the probability of the predictor variables (same as $P(C_k \vert x_1, \dots, x_p)$ )
+             is the probability of each observed combination of predictor variables.
+  
+  •	$P(X \vert C_k))$ = the conditional probability or *likelihood*. Essentially, for each class of                         the response variable (i.e. "good" or "bad"), what is the probability of                            observing the predictor values.
+  
+  •	$P(C_k \vert X)$ = posterior probability. By combining our observed information, we are updating                        our *a priori* information on probabilities to compute a posterior                                  probability that an observation has class $C_k$
+  
+  The NB approach using all predictors gives good results, not the best accuracy, an acceptable  sensitivity and the best specificity so far. 
+  
+  
 ```{r model_NaiveBayes, echo=FALSE, message=FALSE, warning=FALSE}
 train_control <- trainControl(
   method = "cv", 
@@ -548,9 +582,10 @@ nb.fit.all <- train(  #fits with all variables
   tuneGrid = search_grid
   )
 
-nb.pred.all <- predict(nb.fit.all, newdata = german_credit_test) #predicts with all vatiables
+nb.pred.all <- predict(nb.fit.all, newdata = german_credit_test) #predicts with all vaRiables
 nb.cm <- confusionMatrix(nb.pred.all, german_credit_test$credit_response,positive = "good")
 
+#prediction and metrics using all variables
 tab.nb <- data_frame(method = "NB", Accuracy =nb.cm$overall["Accuracy"], Sensitivity=data.frame(nb.cm$byClass["Sensitivity"])[1,1],
            Specificity=data.frame(nb.cm$byClass["Specificity"])[1,1]) 
 
@@ -560,31 +595,41 @@ plot(varImp(nb.fit.all),  main="Naive bayes: variable importance")
 
 
 
-#the next code chunk selects the predictors whose importance is >25 
-#and creates a new df whose variables are only the selected ones 
+#the next code chunk selects the predictors whose importance is >30 
+#and creates a new df whose variables are only he five most important 
 nb.importance <- varImp(nb.fit.all) %>% .$importance 
 nb.importance <- nb.importance%>% mutate(variable=row.names(nb.importance)) %>%  filter(., good >30) %>% .$variable
 nb.impIndexes <- names(x) %in% nb.importance 
 nb.dataImp <- x[nb.impIndexes]
 
 ###re-fitting using variable importance
-nb.fit.varimp <- train( # train a model using only the "varimp>25" df
+nb.fit.varimp <- train( # train a model using only the "varimp>30" df
   nb.dataImp,y,
   method = "naive_bayes",
   trControl = train_control,
   tuneGrid = search_grid
   )
 
+#prediction and metrics using all the five most important variables
 nb.pred.imp <- predict(nb.fit.varimp, newdata = german_credit_test)
 nb.cm.imp <- confusionMatrix(nb.pred.imp, german_credit_test$credit_response,positive = "good")
 
 tab.nb_imp <- data_frame(method = "NB-IMP", Accuracy =nb.cm.imp$overall["Accuracy"], Sensitivity=data.frame(nb.cm.imp$byClass["Sensitivity"])[1,1],
                      Specificity=data.frame(nb.cm.imp$byClass["Specificity"])[1,1]) 
 
-print(knitr::kable(tab.nb_imp))
+
 
 ```
- PCA
+ 
+ The model has been retrained using the most five important predictors computed by varimp: Accuracy is quite the same as the previous "all-variables" model, slightly better sensitivity but an higher FPR
+ `r {print(knitr::kable(tab.nb_imp))}`
+ 
+**PRINCIPAL COMPONENT ANALYSIS**
+
+  The idea of PCA is simple: reduce the number of variables of a data set, while preserving as much information as possible. This model is based on a dimensionality-reduction method that is often used to reduce the dimensionality of large data sets, by transforming a large set of variables into a smaller one that still contains most of the information in the large set.
+ In this particular case, there are 1.000 observations covered by 19 variables. As seen before, none of them is correlated to each other, so we expect no great advatage using PCA.
+ The input dataset has to be numeric and normalized, so this has be done.
+ Next, the pca summary shows numerical evidence of quite uniform variability distribution, that is also possible to apprecciate by two plots:  the cumulative one illustrates that variability sums up almost as a stright line trend following a gentle *positive* slope.    
 
 ```{r  pcaEval,  echo=FALSE, message=TRUE,warning=TRUE}
 # first of all, the matrix must be normalized 
@@ -604,10 +649,29 @@ plot(proportion.variance, type="b",  xlab="PCs",ylab="Variance Proportion",main 
 #the three principal components ( PC1,PC2,PC3)
 pr_comp <- round(sum(proportion.variance[1:3])*100)
 
-print(pr_comp)
+
 
 ```
 
+The variance distribution shows that beyond the first three component there is a great amount of variability, i.e. the principal three component have only the  `r {print(pr_comp)}`% of total variability. On the basis of this evidence, no training/predictions have been done using PCA.
+
+
+## Results
+
+Prior to choose the best approach, we should keep always keep in mind the business requirements related to the particular project. In other words, the decision is to choose  the best model to maximize profits and minimize losses for the bank. These would be the main rules to follow:
+
+  • To predict a customer with bad credit rating as good, the bank will end up losing the whole credit amount lent to him since he will default on the payment and so loss for the bank is 100%, so the FPR should be as low as possible ( specificity as high as possible )
+  
+  • To incorrectly predict a customer with good credit rating as bad, means to deny him the credit loan but there is neither any profit nor any loss involved in this case. High sensitivity is appreciated but is more important good specificity.
+  
+  • To correctly predict a customer with bad credit rating as bad, means correctly deny
+him a credit loan and so there is neither any loss nor any profit. The results as the same as the previous conditions, but there is better accuracy and better prediction skills.
+
+• To correctly predict a customer with good credit rating as good, means, of course, the main target, if the TPR is much more higher than FPR.
+  
+Considering all the above rules, none of the model so far used and shown in the table would perfectly fit, so we should choose a trade-off approach.
+
+NB and RF get the same AUC shold appear best two, but the first has better specificity ( we have to keep in mind the importance of low FPR) on the other hand RF has much better sensitivity. So in this case, a deep analisys shold be done in order to understand the weight of *credit_amount* ( the most important variable in all methods) and choose for better sensitivity than specificity.
 
 
 ```{r Results,  echo=FALSE, message=FALSE,warning=FALSE}
@@ -631,4 +695,9 @@ for(tab.record in tab.entry){
 print(knitr::kable(tab.complete))
 
 ```
+
+## Conclusions
+
+
+The data scientist should always keep in mind that the business requirement set is the main milestone when he works on whatever project. The techineques adopted in this project would aim to better explore the business rules and  the problem domain and eventually would find out the solution that best fits the use cases. As seen in the results section, none of the models perfectly fits the solution: for example, further algorithms could be used and benchmarked; deeper analysis on important variable could be done. Ensemble tecniques shoold be helpful. Anyway, for this project, to choose NB or RF cold be a satisfactory solution.
 
